# openamr-platform-sw

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  robot_safety_issue.md
install/: local_setup.sh  setup.sh
install/openamrobot_description/share/openamrobot_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/openamrobot_docking/lib/openamrobot_docking/: detected_dock_pose_publisher  dock_trigger.py
install/openamrobot_docking/share/openamrobot_docking/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/openamrobot_docking/share/openamrobot_docking/cmake/: openamrobot_dockingConfig.cmake
install/openamrobot_docking/share/openamrobot_docking/config/: dock_trigger.yaml  docking_pose_publisher.yaml  openamrobot_docking.yaml  openamrobot_docking_backup.yaml
install/openamrobot_docking/share/openamrobot_docking/docs/: 02_apriltag_ros.md  03_tf_frames.md  04_docking_pipeline.md  06_parameters.md  07_reproduce_results.md  09_diagrams.md  README.md
install/openamrobot_docking/share/openamrobot_docking/launch/: detected_dock_pose_publisher.launch.py  openamrobot_docking.launch.py
install/openamrobot_gazebo/share/openamrobot_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/openamrobot_nav2/share/openamrobot_nav2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2/src/openamrobot_bringup/: README.md
ros2/src/openamrobot_control/: README.md
ros2/src/openamrobot_description/: README.md  package.xml  setup.py
ros2/src/openamrobot_description/config/: rviz.rviz
ros2/src/openamrobot_description/launch/: launch.py
ros2/src/openamrobot_description/urdf/: gazebo_control.xacro  robo_urdf.urdf.xacro
ros2/src/openamrobot_docking/: CMakeLists.txt  README.md  package.xml
ros2/src/openamrobot_docking/config/: dock_trigger.yaml  tags_36h11_sim.yaml
ros2/src/openamrobot_docking/docs/: 00_overview.md  01_quickstart.md  02_architecture.md  03_tf_frames.md  04_apriltag.md  05_parameters.md  06_camera_calibration.md  07_reproduce_results.md  08_sequencer_4phase.md  09_troubleshooting.md  10_diagrams.md  11_changes_from_upstream.md  12_lessons_learned.md  README.md
ros2/src/openamrobot_docking/docs/legacy/: 05_dock_setup_map.md  08_troubleshooting.md
ros2/src/openamrobot_docking/launch/: apriltag_sim.launch.yml  bringup_sim.launch.py  openamrobot_docking.launch.py
ros2/src/openamrobot_docking/models/apriltag_dock/: model.config  model.sdf
ros2/src/openamrobot_docking/models/apriltag_dock/materials/textures/: apriltag_36h11_id0.png.raj-backup
ros2/src/openamrobot_docking/scripts/: dock_trigger.py
ros2/src/openamrobot_drivers/: README.md
ros2/src/openamrobot_gazebo/: README.md  package.xml  setup.py
ros2/src/openamrobot_gazebo/launch/: gz_simulator.launch.py
ros2/src/openamrobot_gazebo/worlds/: walled_world.sdf
ros2/src/openamrobot_nav2/: README.md  package.xml  setup.cfg  setup.py
ros2/src/openamrobot_nav2/config/: nav2_params.yaml  scan_body_filter.yaml  slam.yaml
ros2/src/openamrobot_nav2/launch/: localization_launch.py  navigation_launch.py  online_async_launch.py  sim_bringup_launch.py
ros2/src/openamrobot_nav2/maps/: my_map.pgm  my_map.pgm.bak  my_map.yaml
ros2/src/openamrobot_nav2/rviz/: nav2_view.rviz
ros2/src/openamrobot_perception/: README.md
