<?xml version="1.0"?>
<package format="3">
  <name>openamrobot_docking</name>
  <version>0.1.0</version>
  <description>AprilTag-based autodocking for the OpenAMRobot platform. Provides the 4-phase docking sequencer (Nav2 staging, camera-frame centring scan + running-average filter, perpendicular alignment spin, line-tracking final approach), the AprilTag detection pipeline, and the docking-specific simulation assets (dock model + textures). Composes openamrobot_description, openamrobot_gazebo, and openamrobot_nav2 via launch composition.</description>

  <maintainer email="botshare.ai@gmail.com">OpenAMRobot Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core build + runtime -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Python runtime (dock_trigger.py) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Launch infrastructure -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- AprilTag detection pipeline -->
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>

  <!-- Gazebo simulation composition (referenced at runtime, not copied) -->
  <exec_depend>openamrobot_description</exec_depend>
  <exec_depend>openamrobot_gazebo</exec_depend>
  <exec_depend>openamrobot_nav2</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Nav2 action interfaces used by the 4-phase sequencer -->
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
