<?xml version="1.0"?>
<package format="3">
  <name>openamrobot_nav2</name>
  <version>0.1.0</version>
  <description>Nav2 bringup, configuration, maps, SLAM, localization, and navigation stack integration for OpenAMRobot.</description>

  <maintainer email="botshare.ai@gmail.com">OpenAMRobot Maintainers</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>